# plant_dashboard

./: .gitignore  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_QUICKSTART.md  README.md  activate_env.sh  docker-compose.yml  handoff.md  package-lock.json  package.json  plan.md  run-docker.sh  run-local.sh
.claude/: settings.local.json
.github/workflows/: api-tests.yml
apps/api/: .coverage  .env.example  Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 3d8788ddbee6_initial_schema.py  dfd45601f9e6_add_follows_table.py
apps/api/app/: __init__.py  db.py  main.py  models.py  schemas.py  storage.py
apps/api/tests/: conftest.py  test_main.py  test_storage.py
apps/web/: .env.example  Dockerfile  instrumentation-client.ts  instrumentation.ts  middleware.ts  next.config.mjs  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: global-error.tsx  globals.css  layout.tsx  page.tsx
apps/web/app/analytics/: page.tsx
apps/web/app/api/[...path]/: route.ts
apps/web/app/dashboard/: page.tsx
apps/web/app/people/: page.tsx
apps/web/app/plant/[id]/: page.tsx
apps/web/app/plant/[id]/logs/: page.tsx
apps/web/app/profile/[userId]/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/app/sign-in/[[...sign-in]]/: page.tsx
apps/web/app/sign-up/[[...sign-up]]/: page.tsx
apps/web/components/: ai-chat.tsx  analytics-charts.tsx  api-status.tsx  care-chart.tsx  dashboard-gallery.tsx  follow-button.tsx  health-chart.tsx  log-actions.tsx  log-entry-card.tsx  log-form.tsx  nav-account.tsx  photo-gallery.tsx  plant-actions.tsx  plant-form.tsx  plant-grid.tsx  plant-thumbnail.tsx  quick-water-button.tsx  settings-defaults.tsx  settings-timezone.tsx  theme-toggle.tsx
apps/web/e2e/: dashboard.spec.ts  helpers.ts  homepage.spec.ts  plant-detail.spec.ts  settings.spec.ts
apps/web/lib/: api.ts  backend.ts  format.ts  health.ts  theme.tsx  types.ts  use-timezone.ts
scripts/: deploy-setup.sh  deploy-verify.sh
