[project]
name = "plant-care-api"
version = "0.1.0"
description = "FastAPI backend for plant care SaaS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic>=2.8.2",
  "psycopg[binary]>=3.2.1",
  "httpx2>=0.1.0",
  "pytest>=8.3.2",
]

[tool.uvicorn]
factory = false
