[project]
name = "plant-care-api"
version = "0.1.0"
description = "FastAPI backend for plant care SaaS"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "uvicorn[standard]>=0.30.0",
  "sqlalchemy>=2.0.32",
  "pydantic>=2.8.2",
  "psycopg[binary]>=3.2.1",
  "httpx>=0.27.0",
  "python-multipart>=0.0.9",
  "pytest>=8.3.2",
  "slowapi>=0.1.9",
  "alembic>=1.18.4",
]

[tool.pytest.ini_options]
filterwarnings = [
  # SQLAlchemy uses datetime.utcnow() internally; not our code to fix.
  "ignore::DeprecationWarning:sqlalchemy",
]

[tool.uvicorn]
factory = false
